# Building_Python_Web_APIs_with_FastAPI

./: .gitignore  Dockerfile  pyproject.toml
ch01/todos/: api.py
ch02/todos/: model.py  todo.py
ch03/todos/: api.py  todo.py
planner/: .env  .env.example  main.py  requirements.txt
planner/auth/: authenticate.py  jwt_handler.py
planner/database/: connection.py
planner/models/: events.py  users.py
planner/routes/: events.py  users.py
todos/: model.py  todo.py
todos/templates/: home.html  todo.html
