[tool.poetry]
name = "building-python-web-apis-with-fastapi"
version = "0.1.0"
description = ""
authors = ["Francisco De La Cruz <helloquico@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "0.70.0"
uvicorn = "0.15.0"
jinja2 = "3.1.2"
python-multipart = "^0.0.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
