[tool.poetry]
name = "building-python-web-apis-with-fastapi"
version = "0.1.0"
description = ""
authors = ["Francisco De La Cruz <helloquico@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.74.1"
uvicorn = "0.17.5"
jinja2 = "3.0.3"
python-multipart = "0.0.5"
anyio = "3.5.0"
bcrypt = "3.2.0"
beanie = "1.10.4"
asgiref = "3.5.0"
cffi = "1.15.0"
click = "8.0.4"
dnspython = "2.2.0"
email-validator = "1.1.3"
h11 = "0.13.0"
idna = "3.3"
markupsafe = "2.1.0"
motor = "2.5.1"
multidict = "6.0.2"
passlib = "1.7.4"
pycparser = "2.21"
pydantic = "1.10.16"
pyjwt = "2.3.0"
pymongo = "3.12.3"
python-dotenv = "0.20.0"
six = "1.16.0"
sniffio = "1.2.0"
sqlalchemy = "1.4.32"
sqlalchemy2-stubs = "0.0.2a20"
sqlmodel = "0.0.6"
starlette = "0.17.1"
toml = "0.10.2"
typing-extensions = "4.2.0"
yarl = "^1.18.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
